# bfloat16

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: format.yml  ubuntu-release-build.yml  ubuntu-release-test.yml
bfloat/: CMakeLists.txt  bfloat16.cpp  bfloat16.h  main.cpp
src/: bfloat16.cpp  bfloat16.h  main.cpp
test/: Bfloat16Tests.cpp  CMakeLists.txt
